[gd_scene load_steps=20 format=3 uid="uid://70ym23bjjyoh"]

[ext_resource type="Script" uid="uid://drdcnkfl7pri7" path="res://scripts/main.gd" id="1_tefeu"]
[ext_resource type="MeshLibrary" uid="uid://dj2gwxmun3byt" path="res://assets/tiles/TestMeshLibrary.tres" id="2_o6xl0"]
[ext_resource type="Script" uid="uid://dxx4v6vkgfpyi" path="res://scripts/farmland_terrain_tool.gd" id="3_o6xl0"]
[ext_resource type="PackedScene" uid="uid://u07ux4av6dcg" path="res://scenes/game_menu.tscn" id="3_tipki"]
[ext_resource type="Script" uid="uid://bwlj0grhdgew4" path="res://scripts/camera_pivot.gd" id="4_85g3d"]
[ext_resource type="Environment" uid="uid://dol1vabg3lf3" path="res://assets/world_environment.tres" id="5_choun"]
[ext_resource type="PackedScene" uid="uid://b30mmydhqq4xf" path="res://scenes/shop_ui.tscn" id="5_tipki"]
[ext_resource type="PackedScene" uid="uid://1hnrcibjxx0j" path="res://scenes/starfield.tscn" id="6_ya4ey"]
[ext_resource type="AudioStream" uid="uid://c1qflml2kt2jd" path="res://external/sfx/spaceship.mp3" id="7_jbj1t"]
[ext_resource type="PackedScene" uid="uid://g82bjbhulk4f" path="res://scenes/space_ship.tscn" id="9_85g3d"]
[ext_resource type="AudioStream" uid="uid://dgimlww27nre3" path="res://external/sfx/cut.mp3" id="10_dp3eg"]
[ext_resource type="AudioStream" uid="uid://bnqb2544ugek6" path="res://external/sfx/drop.mp3" id="11_0ld40"]
[ext_resource type="AudioStream" uid="uid://bba3ok3nb8kyr" path="res://external/sfx/equip.mp3" id="12_dp3eg"]
[ext_resource type="AudioStream" uid="uid://dim1nnvuynhhe" path="res://external/sfx/error.mp3" id="12_gqmmt"]
[ext_resource type="AudioStream" uid="uid://ldd8w3mvhbn2" path="res://external/sfx/shovel.mp3" id="13_yc10j"]
[ext_resource type="AudioStream" uid="uid://doinvjx40462j" path="res://external/sfx/splash.mp3" id="14_jscy8"]
[ext_resource type="AudioStream" uid="uid://bju452pytce5a" path="res://external/sfx/suck.mp3" id="16_0ld40"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w2mt5"]
transparency = 1

[sub_resource type="BoxMesh" id="BoxMesh_jc33t"]
material = SubResource("StandardMaterial3D_w2mt5")
size = Vector3(1.15, 1.15, 1.15)

[node name="Main" type="Node3D"]
script = ExtResource("1_tefeu")

[node name="Farmland" type="GridMap" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh_library = ExtResource("2_o6xl0")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(65532, 65532, 1, 65532, 65533, 1, 65532, 65534, 1, 65532, 65535, 1, 65532, 0, 1, 65532, 1, 1, 65532, 2, 1, 65532, 3, 1, 65533, 65532, 1, 65533, 65533, 1, 65533, 65534, 1, 65533, 65535, 1, 65533, 0, 1, 65533, 1, 1, 65533, 2, 1, 65533, 3, 1, 65534, 65532, 1, 65534, 65533, 1, 65534, 65534, 1, 65534, 65535, 1, 65534, 0, 1, 65534, 1, 1, 65534, 2, 1, 65534, 3, 1, 65535, 65533, 1, 65535, 65534, 1, 65535, 65535, 1, 65535, 0, 1, 65535, 1, 1, 65535, 2, 1, 65535, 3, 1, 0, 65532, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 1, 65532, 1, 1, 65534, 1, 1, 0, 1, 1, 1, 1, 1, 2, 1, 1, 3, 1, 2, 65534, 1, 2, 1, 1, 2, 2, 1, 2, 3, 1, 3, 65533, 1, 3, 65535, 1, 3, 1, 1, 3, 2, 1, 3, 3, 1, 3, 65532, 1, 2, 65532, 1, 0, 65533, 1, 0, 65534, 1, 1, 65535, 1, 2, 65535, 1, 2, 0, 1, 3, 0, 1, 3, 65534, 1, 2, 65533, 1, 1, 65533, 1, 65535, 65532, 1, 3, 65531, 0, 4, 65531, 0, 4, 65532, 0, 4, 65533, 0, 4, 65534, 0, 1, 65531, 0, 2, 65531, 0, 0, 65531, 0, 65535, 65531, 0, 65534, 65531, 0, 65533, 65531, 0, 65532, 65531, 0, 65531, 65531, 0, 65531, 65532, 0, 65531, 65533, 0, 65531, 65534, 0, 65531, 65535, 0, 65531, 0, 0, 65531, 1, 0, 65531, 2, 0, 65531, 3, 0, 65532, 4, 0, 65531, 4, 0, 65533, 4, 0, 65535, 4, 0, 65534, 4, 0, 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 262144, 4, 3, 262144, 4, 65535, 262144, 4, 0, 262144, 4, 1, 262144, 4, 2, 262144)
}
script = ExtResource("3_o6xl0")
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="overlay" type="MeshInstance3D" parent="Farmland"]
mesh = SubResource("BoxMesh_jc33t")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Game Menu" parent="CanvasLayer" instance=ExtResource("3_tipki")]
visible = false

[node name="ShopUI" parent="CanvasLayer" instance=ExtResource("5_tipki")]
visible = false

[node name="SpaceShipStuff" type="Node3D" parent="."]

[node name="Spaceship" parent="SpaceShipStuff" instance=ExtResource("9_85g3d")]
unique_name_in_owner = true
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, -6.918195, 2.1641774, 1.8044796)
visible = false

[node name="AudioStreamPlayer3D Spaceship" type="AudioStreamPlayer3D" parent="SpaceShipStuff/Spaceship"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.918195, -2.1641774, -1.8044796)
stream = ExtResource("7_jbj1t")
unit_size = 100.0
doppler_tracking = 2

[node name="Spaceship Spawn" type="Marker3D" parent="SpaceShipStuff"]
unique_name_in_owner = true
transform = Transform3D(-0.5901971, 0, 0.80725914, 0, 1, 0, -0.80725914, 0, -0.5901971, -349.2934, 26.358707, 1.8044796)

[node name="Spaceship Despawn" type="Marker3D" parent="SpaceShipStuff"]
unique_name_in_owner = true
transform = Transform3D(-0.5901971, 0, 0.80725914, 0, 1, 0, -0.80725914, 0, -0.5901971, 260.42914, 26.358707, 1.8044796)

[node name="Spaceship Docking" type="Marker3D" parent="SpaceShipStuff"]
unique_name_in_owner = true
transform = Transform3D(-0.5901971, 0, 0.80725914, 0, 1, 0, -0.80725914, 0, -0.5901971, -6.918195, 2.1641774, 1.8044796)

[node name="Spaceship Cooldown" type="Timer" parent="SpaceShipStuff"]
unique_name_in_owner = true
wait_time = 30.0
one_shot = true
autostart = true

[node name="camera pivot" type="Node3D" parent="."]
script = ExtResource("4_85g3d")

[node name="cam" type="Camera3D" parent="camera pivot"]
transform = Transform3D(0.70710677, -0.4055798, 0.579228, 0, 0.81915206, 0.57357645, -0.70710677, -0.4055798, 0.579228, 7, 6, 7)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="camera pivot/cam"]
transform = Transform3D(0.7512641, -0.66000164, 0, 0.49735305, 0.56612515, 0.6573753, -0.43386874, -0.49386248, 0.7535634, 0, 0, 0)
shadow_enabled = true

[node name="Audio" type="Node" parent="."]

[node name="AudioStreamPlayer Cut" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("10_dp3eg")
max_polyphony = 3
bus = &"Sfx"

[node name="AudioStreamPlayer Drop" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("11_0ld40")
max_polyphony = 3
bus = &"Sfx"

[node name="AudioStreamPlayer Equip" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("12_dp3eg")
volume_db = -10.214
max_polyphony = 3
bus = &"Sfx"

[node name="AudioStreamPlayer Error" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("12_gqmmt")
max_polyphony = 3
bus = &"Sfx"

[node name="AudioStreamPlayer Shovel" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("13_yc10j")
max_polyphony = 3
bus = &"Sfx"

[node name="AudioStreamPlayer Splash" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("14_jscy8")
max_polyphony = 3
bus = &"Sfx"

[node name="AudioStreamPlayer Suck" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("16_0ld40")
max_polyphony = 3
bus = &"Sfx"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("5_choun")

[node name="Starfield" parent="." instance=ExtResource("6_ya4ey")]
lifetime = 100000.0

[connection signal="closed" from="CanvasLayer/ShopUI" to="." method="_on_shop_ui_closed"]
[connection signal="timeout" from="SpaceShipStuff/Spaceship Cooldown" to="." method="_on_spaceship_cooldown_timeout"]
